# grok-super-agent

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
docs/: demo_scenarios.md
src/: __init__.py  cli.py  config.py  main.py  main_cup.py
src/agent/: __init__.py  react.py
src/api/: server.py
src/computer_use/: __init__.py  cup_client.py
src/llm_clients/: __init__.py  claude_client.py  grok_client.py  openai_client.py
src/orchestrator/: __init__.py  loop.py  router.py  task_decomposer.py
src/tools/: __init__.py  base.py  code_exec.py  file_ops.py  registry.py
